# resume-Agent

./: .env.example  .gitignore  ALIGNMENT_FIX_SUMMARY.md  ARCHITECTURE_FIXES.md  CHANGELOG.md  ERROR_HANDLING_FIX.md  INTEGRATION_GUIDE.md  LICENSE  PDF_PARSER_ENHANCEMENT.md  PUSH_TO_GITHUB.md  README.md  SECURITY_INCIDENT.md  THRESHOLD_CHECKER_REFACTOR.md  USAGE_GUIDE.md  create_test_resume.py  pyproject.toml  run_test.sh  test_debug.py  test_my_resume.py
.claude/: settings.local.json
docs/: README-DOCS.md  debugging-guide.md  design-doc-part1-overview.md  design-doc-part2-implementation.md  design-doc-part3-architecture.md
docs/superpowers/plans/: 2026-06-15-resume-agent-plan.md
docs/superpowers/specs/: 2026-06-15-resume-screening-agent-design.md
examples/: basic_usage.py  custom_threshold.py
src/: __init__.py  config.py  models.py  state.py  workflow.py
src/agents/: __init__.py  evaluator.py  question_generator.py
src/nodes/: __init__.py  checker.py  evaluator.py  generator.py  parser.py
tests/: test_agents.py  test_concurrent_execution.py  test_config.py  test_e2e.py  test_enhanced_parser.py  test_error_handling.py  test_integration.py  test_models.py  test_nodes.py  test_threshold_checker.py  test_workflow.py
